# image-processing

./: .gitattributes  HOW_TO_USE.md  HOW_TO_USE.txt  README  README.md  README.txt
773-calib-stats/: 019 barrel errors.txt  019 barrel minus edges errors.txt  019 errors.txt  019 minus edges errors.txt  019 pinc minus edges errors.txt  019 pincushion errors.txt  dsc barrel errors.txt  dsc barrel no edge errors.txt  dsc errors.txt  dsc minus edges errors.txt  dsc pinc errors.txt  dsc pinc minus edges errors.txt  error-calib-results.txt
code/: .gitignore  AdaptiveSegment.cpp  CMakeLists.txt  INSTALL  build.sh
code/calibration/: 0025.txt  0026.txt  160019.txt  160027.txt  calibration_object.cpp  calibration_object.h  camera_calibrator.cpp  camera_calibrator.h  main.cpp  r11-r14-r71-r74-L11-L15-L71-L75.txt  stdafx.cpp  test.txt
code/lib/: CMakeLists.txt  README
code/lib/OpenSURF/: CMakeLists.txt  fasthessian.cpp  fasthessian.h  integral.cpp  integral.h  ipoint.cpp  ipoint.h  kmeans.h  responselayer.h  surf.cpp  surf.h  surflib.h  utils.cpp  utils.h
code/lib/QPropertyEditor/: CMakeLists.txt  EnumProperty.cpp  EnumProperty.h  Property.cpp  Property.h  QPropertyEditor.pro  QPropertyEditorWidget.cpp  QPropertyEditorWidget.h  QPropertyModel.cpp  QPropertyModel.h  QVariantDelegate.cpp
code/lib/distortion/: CMakeLists.txt  ami_pol.cpp  ami_pol.h  ami_tif.cpp  ami_tif.h  lens_distortion.cpp  lens_distortion.h  lens_distortion_estimation.cpp  lens_distortion_estimation.h  readme.txt
code/src/: AdaptiveSegment.cpp  CMakeLists.txt  main.cpp  message-handler.cpp  message-handler.h  processing-gui.cpp  processing-gui.h  resizingimagelabel.cpp  util.cpp  util.h
code/src/distortion/: ami_tif.cpp  ami_tif.h  lens_distortion.cpp  lens_distortion.h  lens_distortion_estimation.cpp  lens_distortion_estimation.h
code/src/headers/: processing-gui.h  resizingimagelabel.h  util.h
code/src/processors/: adaptive_segment.cpp  adaptive_segment.h  calibration_object.cpp  calibration_object.h  calibration_processor.cpp  calibration_processor.h  camera_calibrator.cpp  camera_calibrator.h  distortion-removal.cpp  distortion-removal.h  face_normalisation_processor.cpp  face_normalisation_processor.h  fast_hessian.cpp  fast_hessian.h  feature_points.cpp  feature_points.h  integral_image.cpp  integral_image.h  null_processor.cpp  null_processor.h  pca_training_processor.cpp  pca_training_processor.h  processor.cpp  processor.h  processor_model.cpp  processor_model.h  rectification_processor.cpp  rectification_processor.h  region.cpp  region.h  resizing_processor.cpp  resizing_processor.h  response_layer.cpp  response_layer.h  rpoint.cpp  rpoint.h  segmenting.cpp  segmenting.h  stereo_processor.cpp  stereo_processor.h  (+6 more)
code/src/ui/: file-edit-widget.ui  processing-gui.ui
code/src/widgets/: custom_types.cpp  custom_types.h  file_edit_widget.cpp  file_edit_widget.h  graphicsview.cpp  graphicsview.h  imagegraphicsitem.cpp  imagegraphicsitem.h  poiitem.cpp  poiitem.h  qfileinfo_property.cpp  qfileinfo_property.h  signalingdockwidget.cpp  signalingdockwidget.h
code/tests/: CMakeLists.txt  features-test.cpp  region-test.cpp  rpoint-test.cpp
report/: .gitignore  027_barrel_left.txt  027_barrel_right.txt  027_normal_left.txt  027_normal_right.txt  027_pincushion_left.txt  027_pincushion_right.txt  Calibration_results.ods  Distortion_results.ods  camera-calibration-prior.tex  camera-calibration.tex  conclusions.tex  distortion-removal-prior.tex  distortion-removal.tex  face-features-prior.tex  face-features.tex  image-processing.bib  image-processing.tex  introduction.tex  other-work.tex  program-structure.tex  segmentation-prior.tex  segmentation.tex  tohojo-common.sty  tohojo-xe.sty
report/test-data/: 15b.tif  21.tif  4.tif
report2/: .gitignore  conclusions.tex  face-recognition-prior.tex  face-recognition.tex  image-processing.aux  image-processing.bib  image-processing.lof  image-processing.out  image-processing.tex  image-processing.toc  improvements.tex  introduction.tex  other-work.tex  program-structure.tex  rectification-prior.tex  rectification.tex  ruc.bst  stereo-matching-prior.tex  stereo-matching.tex  stereo-results.xlsx  tohojo-xe.sty
test-images/: CAL_CUBE_LEFT.txt  CAL_CUBE_RIGHT.txt  CAL_CUBE_calibration.txt  Cube_points_altered.xls  IMG_20120313_160019.txt  IMG_20120313_160019_segmented.xls  IMG_20120313_160027.txt  IMG_20120313_160027_segmented.xls  calibration_output_160019-27.txt  calibration_output_160027-19.txt  chess-1-plain.tif  chess-12-shiftpinc.tif  chess-16-spread20pinc.tif  chess-17-spread10barrel.tif  chess-18-spread20barrel.tif  chess-20-edgepinc.tif  chess-22-other.tif  chess-3-barrel.tif  chess-4-pinc.tif  chess-7-rothalfpinc.tif  chess-9-rotquarterbarrel.tif  distortion_removal_test.tif  distortion_removal_test_10.tif  distortion_removal_test_12.tif  distortion_removal_test_15.tif  distortion_removal_test_2.tif  distortion_removal_test_3.tif  distortion_removal_test_4.tif  distortion_removal_test_5.tif  distortion_removal_test_6.tif  distortion_removal_test_flag.tif  distortion_removal_test_flag_double.tif  real_world_measurements.txt
test-images/chess-images/: chess-10-rotquarterpinc.tif  chess-11-shiftbarrel.tif  chess-13-gauss10barrel.tif  chess-14-gauss10pinc.tif  chess-15-spread10pinc.tif  chess-19-edgebarrel.tif  chess-2-colour.tif  chess-21-other.tif  chess-5-rotquarter.tif  chess-6-rothalf.tif  chess-8-rothalfpinc.tif
test-images/faces/: 0000_00000001.results.csv  0000_00000001.txt  0001_00000001.results.csv  0001_00000001.txt  0002_1.results.csv  0002_1.txt  0003_00000001.results.csv  0003_00000001.txt  0004_6.results.csv  0004_6.txt  0007_002.txt  1-0000_00000001.results.csv  1-0000_00000001.results.ods  2-0001_00000001.results.csv  2-0001_00000001.results.ods  3-0002_1.results.csv  3-0002_1.results.ods  4-0003_00000001.results.csv  4-0003_00000001.results.ods  5-0004_6.results.csv  5-0004_6.results.ods  6-0007_002.results.csv  6-0007_002.results.ods  LICENCE.txt
test-images/imgdb/: .gitignore  DSCF4071_l.txt  DSCF4071_r.txt  DSCF4072_l.txt  (+88 more)
(+90 files in other folders)
